# Chroma-Vector-Database-App

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FREE_TIER_ANALYSIS.md  README.md  TROUBLESHOOTING.md  app-minimal.py  app.py  create_favicon.py  deploy.bat  deploy.sh  docker-compose.yml  fix_dependencies.py  fix_numpy.py  main.py  pyproject.toml  railway.json  render-basic.yaml  render-minimal.yaml  render-simple.yaml  render.yaml  requirements-basic.txt  requirements-minimal.txt  requirements-simple.txt  requirements.txt  run.py  sample_data.py  setup_deployment.py  start.bat  test_server.py
chroma_db/: chroma.sqlite3
static/: app.js  style.css
templates/: index.html
