[project]
name = "chroma-vector-database-app"
version = "0.1.0"
description = "A modern web application for storing and searching emails using semantic similarity with vector embeddings"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "chromadb==0.4.15",
    "sentence-transformers==2.2.2",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "numpy==1.24.3",
    "torch==2.0.1",
    "transformers==4.35.2",
    "huggingface-hub==0.16.4",
    "aiofiles==23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
